# django-supertokens-example

./: README.md  docker-compose.yml  pyproject.toml  start_gunicorn.sh
api/: models.py
api/migrations/: 0001_initial.py
app/: settings.py
