[tool.poetry]
name = "drf-supertokens-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
djangorestframework = "^3.14.0"
supertokens-python = "0.11"
django-cors-headers = "^3.14.0"

[tool.poetry.dev-dependencies]
ipython = "^8.11.0"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
